--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
     steps:
@@ -24,29 +24,11 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
-      - name: Detect .NET projects
-        id: detect
-        shell: bash
-        run: |
-          set -euo pipefail
-          project_files="$(find . -type f \( -name '*.sln' -o -name '*.csproj' \) -not -path './.git/*')"
-          if [ -z "$project_files" ]; then
-            echo "No .NET solution/project files found yet. Bootstrap check passing."
-            echo "has_project=false" >> "$GITHUB_OUTPUT"
-          else
-            echo "Detected .NET files:"
-            echo "$project_files"
-            echo "has_project=true" >> "$GITHUB_OUTPUT"
-          fi
-
       - name: Restore
-        if: steps.detect.outputs.has_project == 'true'
-        run: dotnet restore
+        run: dotnet restore LoginShot.sln
 
       - name: Build
-        if: steps.detect.outputs.has_project == 'true'
-        run: dotnet build --no-restore
+        run: dotnet build LoginShot.sln --no-restore
 
       - name: Test
-        if: steps.detect.outputs.has_project == 'true'
-        run: dotnet test --no-build
+        run: dotnet test LoginShot.sln --no-build
