--- a/src/LoginShot/LoginShot.csproj
+++ b/src/LoginShot/LoginShot.csproj
@@ -1,4 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LoginShot.Core\LoginShot.Core.csproj" />
