--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
             throw "LoginShot.exe not found at $exePath"
           }
 
-          $zipName = "LoginShot-windows-$tag-$rid-singlefile-selfcontained.zip"
+          $zipName = "LoginShot-windows-$tag-$rid-singlefile.zip"
           $checksumName = "$zipName.sha256"
 
           if (Test-Path $zipName) {
