--- a/src/LoginShot.Core/LoginShot.Core.csproj
+++ b/src/LoginShot.Core/LoginShot.Core.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="YamlDotNet" Version="15.1.2" />
   </ItemGroup>
 
