feat: add generated camera icon for tray and app

--- a/src/LoginShot/LoginShot.csproj
+++ b/src/LoginShot/LoginShot.csproj
@@ -13,6 +13,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
+    <ApplicationIcon>Assets\LoginShot.ico</ApplicationIcon>
     <UseWindowsForms>true</UseWindowsForms>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <ImplicitUsings>enable</ImplicitUsings>
