test: separate core and app test projects

--- a/src/LoginShot/LoginShot.csproj
+++ b/src/LoginShot/LoginShot.csproj
@@ -11,6 +11,12 @@
     <ProjectReference Include="..\LoginShot.Core\LoginShot.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>LoginShot.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
